--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,8 +12,8 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- <link rel="stylesheet" type="text/css" href="./style.css">  -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="./style.css">
   
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -45,6 +45,7 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
   <script src="./js/init.js"></script>
+  <script src="./static/js/bundle.js"></script>
 </body>
 
 </html>
